force-app/main/default/objects/RFI_Log__c/RFI_Log__c.object-meta.xml
<CustomObject>
    <label>Request for Information</label>
    <nameField>
        <displayFormat>RFI-{0000}</displayFormat>
        <label>RFI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request for Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>