force-app/main/default/objects/RFI_Log__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Health Plan</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>MCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>