force-app/main/default/objects/RFI_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Information</fullName>
            </value>
            <value>
                <fullName>Confirm Address</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Incomplete Information</fullName>
            </value>
            <value>
                <fullName>Initial Information</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Information Due Reminder</fullName>
            </value>
            <value>
                <fullName>General Call</fullName>
                <isActive>false</isActive>
                <label>General Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>