force-app/main/default/objects/RFI_Log__c/validationRules/Send_Due_Received_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_Due_Received_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF( OR(Received_Date__c  &lt;=  Send_Date__c,Due_Date__c &lt;=  Send_Date__c)  ,true, false)</errorConditionFormula>
    <errorMessage>Impossible date order is provided</errorMessage>
</ValidationRule>